# real-time-communication-practice

./: README.md  main.py  pyproject.toml
api/: communicate.py
templates/: client.html
