[tool.poetry]
name = "real-time-communication-practice"
version = "0.1.0"
description = ""
authors = ["Jong012 <Jong012>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
fastapi = "^0.111.0"
pytz = "^2024.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
